<resources>
    <string name="app_name">yaadtaxi driver</string>
    <string name="fb_app_id">506872503454663</string>
    <string name="fb_acckit_client_token">6ced3e97c93313d445afbe8554ebf7ae</string>
    <string name="ak_acclogin_protocol_scheme">ak6ced3e97c93313d445afbe8554ebf7ae</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="payment">My Trips</string>
    <string name="myearning">My Earning</string>
    <string name="as">Coupon</string>
    <string name="summary">Summary</string>
    <string name="logout">Logout</string>
    <string name="share">Share App</string>
    <string name="help">Help</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCIdZrCtAe6Zhb5YyhVsBNh79dyMsNa6TM</string>
    <string name="where_to_go">Where to go?</string>
    <string name="set_pin_location">Set Pin Location</string>
    <string name="your_location">Your Location</string>
    <string name="done">Done</string>
    <string name="pay">Pay driver via POS machine</string>
    <string name="call">CALL</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="eta">ETA</string>
    <string name="model">Model</string>
    <string name="no_of_passenger">Enter No Of passenger</string>
    <string name="no_of_bags">Enter No Of  Bags</string>
    <string name="ride">Ride</string>
    <string name="submit">Submit</string>

    <string name="enteremail">Enter email address to login</string>
    <string name="enteremail2">Enter your email  address here</string>
    <string name="emailaddress">What\'s your email address?</string>
    <string name="signup">I need to create an account</string>
    <string name="description">Thank you for choosing pngtree, we already sent you an email within a verification link, please click the link to finish the registration. If you havent received the emailin 1 minute, please click the resend button, we will send you another email. Resend to try again. </string>
    <string name="otpdis">Thank you for choosing pngtree, we already sent you an email within a verification link, please click the link to finish the registration. If you havent received the emailin 1 minute, please click the resend button, we will send you another email. Resend to try again. </string>
    <string name="schedule">Schedule</string>
    <string name="forget_password">I forgot my password</string>
    <string name="welcome_back">Welcome back,sign in to continue</string>
    <string name="enterpassword">Enter Your Password</string>
    <string name="wallettext">Your wallet ammount is:</string>
    <string name="helpDescription">Our team person contact you soon!</string>
    <string name="taxiHelp">YaadTaxi Driver App Help</string>
    <string name="no_trip_past">No past trips</string>
    <string name="no_trip_upcomming_past">No Upcoming Trip</string>
    <string name="go_offline">Go Offline</string>
    <string name="go_online">Go online</string>
    <string name="totalRides">TOTAL NO. OF RIDES</string>
    <string name="revenue">REVENUE</string>
    <string name="schduleRides">NO. OF SCHEDULED RIDES</string>
    <string name="cancelRides">CANCELLED RIDES</string>

    <string name="center">Center Ride</string>

    <string name="recovery">Enter your phone number for recovery</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="arrived">Arrived</string>
    <string name="endride">End Ride</string>

</resources>
