<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Summary"
    android:background="@color/graylight"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<RelativeLayout
    android:id="@+id/summ_totalrides"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/white"
    android:elevation="5dp"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/totalRides"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_margin="10dp"
    android:textSize="20dp"
    android:fontFamily="@font/raleway_light"
    />
    <TextView
        android:id="@+id/totalrides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"
        />
<ImageView
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_alignParentRight="true"
    android:src="@drawable/checked"
    android:layout_alignParentTop="true"
    android:layout_margin="10dp"/>
</RelativeLayout>
    <RelativeLayout
        android:id="@+id/summ_revenue"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:elevation="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revenue"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:fontFamily="@font/raleway_light"
            />
        <TextView
            android:id="@+id/totalrevenus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:textSize="30dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/ic_attach_money_black_24dp"
            android:drawablePadding="3dp"
            />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/checked"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/summ_schdulerides"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:elevation="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schduleRides"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:fontFamily="@font/raleway_light"
            />
        <TextView
            android:id="@+id/totalschdulerides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:textSize="30dp"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/checked"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/summ_cancel"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:elevation="5dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelRides"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:fontFamily="@font/raleway_light"
            />
        <TextView
            android:id="@+id/totalcancelledrides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:textSize="30dp"
            android:layout_marginLeft="10dp"
            />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/checked"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>



</LinearLayout>
    </ScrollView>


</RelativeLayout>